[gd_scene load_steps=2 format=3 uid="uid://bgytntonqastp"]

[ext_resource type="Script" uid="uid://5qjb4p2bpb0v" path="res://options.gd" id="1_r314q"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(2.64, 2.16)
script = ExtResource("1_r314q")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 220.833
offset_top = 37.037
offset_right = 282.833
offset_bottom = 60.037
text = "Options"

[node name="ButtonBackMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 219.0
offset_right = 218.0
offset_bottom = 227.0
text = "Back to Menu"

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 125.0
offset_right = 336.0
offset_bottom = 141.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 90.0
offset_right = 219.0
offset_bottom = 113.0
text = "Music Volume"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 152.0
offset_right = 219.0
offset_bottom = 175.0
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 184.0
offset_right = 331.0
offset_bottom = 200.0
max_value = 1.0
step = 0.01
value = 0.5

[connection signal="pressed" from="ButtonBackMenu" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_h_slider_2_value_changed"]
